# ai-demo1

./: .gitignore  Makefile  PROMPT.md  README.md  launch.sh
chat-back/: README.md  main.py  pyproject.toml
chat-back/chat_back/: app.py  auth.py  config.py  models.py  providers.py  routes_inference.py  tracing.py
chat-back/tests/: test_smoke.py
chat-front/: README.md  main.py  pyproject.toml
chat-front/chat_front/: agent.py  app.py  config.py  mcp_bridge.py  oauth.py
chat-front/tests/: test_chat_front.py
chat-front1-py/: Dockerfile  README.md  pyproject.toml
chat-front1-py/chat_front/: agent.py  app.py  config.py
chat-front2-ui/: Dockerfile  pyproject.toml  server.py
chat-front2-ui/static/: index.html
docs/: AZ_CLI.md  CLUSTER.md  MCP.md  OAUTH.md  SETUP.md  TEST.md
k8s/: azure-ai-foundry.yaml  base-gateway.yaml  chat-front1-py.yaml  chat-front2-ui.yaml  eg-values.yaml  envoy-patch-alpn.yaml  kind-cluster.yaml  mcp-route.yaml  mcp-server.yaml  oauth-idp.yaml  security-policy-jwt.yaml
mcp-gw/: README.md  main.py  pyproject.toml
mcp-gw/mcp_gw/: app.py  auth.py  config.py  tools.py  tracing.py
mcp-gw/tests/: test_mcp_gw.py
mcp-server/: Dockerfile  README.md  pyproject.toml
mcp-server/mcp_server/: app.py  auth.py  config.py  tools.py  tracing.py
mcp-server/tests/: test_mcp_server.py
oauth-idp/: Dockerfile  README.md  main.py  pyproject.toml
oauth-idp/oauth_idp/: app.py  crypto.py  models.py  routes_admin.py  routes_oauth.py  store.py
oauth-idp/tests/: test_smoke.py
tempo/: grafana-datasources.yaml  tempo.yaml
tests/: test_integration.py
