[project]
name = "chat-front"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "openai>=2.30.0",
    "pydantic>=2.12.5",
    "pydantic-ai>=1.77.0",
    "pydantic-settings>=2.13.1",
    "uvicorn>=0.43.0",
]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
    "respx>=0.22.0",
]
