[project]
name = "mcp-gw"
version = "0.1.0"
description = "MCP server with mock tool implementations"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "pydantic>=2.12.5",
    "uvicorn>=0.43.0",
]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-anyio>=0.0.0",
]
